# Cpp-for-programmerere

./: README.md
Øving 1/: CMakeLists.txt  main.cpp  temperaturer.txt
Øving 2/: CMakeLists.txt  README.md  oppgave1.cpp  oppgave4.cpp  oppgave5.cpp  oppgave6.cpp
Øving 3/: CMakeLists.txt  Sirkel.cpp  VareTest.cpp  oppgave2.cpp  oppgave4.cpp  vare.cpp  vare.h
Øving 4/: CMakeLists.txt  oppgave1.cpp  oppgave2.cpp
Øving 5/: CMakeLists.txt  main.cpp
Øving 6/: CMakeLists.txt  chess.cpp  echo_server.cpp
Øving 7/: CMakeLists.txt  README.md  broek.cpp  broek.h  broek_t.cpp  mengde.cpp  mengde.h  oppgave2.cpp
Øving 8/: CMakeLists.txt  oppgave1.cpp  oppgave2.cpp  par.cpp
Øving 9/: CMakeLists.txt  oppgave1.cpp
