cmake_minimum_required(VERSION 2.8)

project(Øving_2)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y -Wall -Wextra")

#add_executable(Øving_2 main.cpp)
#add_executable(Oppgave_1a oppgave1a.cpp oppgave1b.cpp)
#add_executable(Oppgave_1b oppgave1b.cpp

add_executable(Oppgave_1 oppgave1.cpp)
add_executable(Oppgave_4 oppgave4.cpp)
add_executable(Oppgave_5 oppgave5.cpp)
add_executable(Oppgave_6 oppgave6.cpp)